feature: add delete product endpoint with admin-only access and ProductStatus field